# Rustaurant

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/structs/: common.rs  user.rs
frontend/: .gitignore  Trunk.toml
frontend/src/: components.rs  main
frontend/src/components/: big_card.rs  home.rs  rating_dropdown.rs  write_a_review.rs
frontend/src/components/home/: card.rs  search_input.rs
frontend/src/components/layout/: footer.rs  navbar.rs
frontend/src/pages/: create_account.rs  login.rs  redirecting.rs
src/: components.rs  handlers.rs  main.rs  pages.rs  readme.md  structs.rs  tempCodeRunnerFile.rs  utils.rs
src/components/: big_card.rs  card.rs  card2.rs  description.rs  layout.rs  rating.rs  review.rs  review_modal.rs  star_rating.rs  write_a_review.rs
src/components/home/: card.rs  search_input.rs
src/components/layout/: footer.rs  navbar.rs
src/handlers/: auth.rs  common.rs  handlers.rs  mflix.rs  mod.rs  restaurant.rs  reviews.rs  user.rs
src/pages/: about.rs  create_account.rs  home.rs  login.rs  not_found.rs  redirecting.rs  restaurant.rs  submitting.rs
src/structs/: auth.rs  common.rs  handlers.rs  mflix.rs  mod.rs  restaurant.rs  reviews.rs  user.rs
static/styles/: tailwind.css
