[package]
name = "rust-axum-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
futures = "0.3.28"
mongodb = { version = "2.4.0", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
serde = { version = "1.0.158", features = ["derive"]}
tokio = { version = "1.26.0", features = ["full"]}
tower-http = { version = "0.4", features = ["trace", "set-header", "timeout", "limit"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bson = { version = "2", features = ["chrono-0_4"] }
serde_with = "2.3.1"
dotenv = "0.15.0"
