[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trunk = "0.16.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
web-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
serde_json = "1.0"

